[build-system]
requires = [
  "setuptools~=67.1",
  "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "octodns-fastly"
requires-python = "~=3.10"
dependencies = [
  "octodns~=1.0.0",
  "requests~=2.28",
]
dynamic = ["version"]

[tool.black]
line-length=127 # The GitHub editor is 127 chars wide
